# dashy

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/dashy/destinations/: png.py
src/dashy/sources/: __init__.py
src/dashy/sources/openweathermap/: weather.py
src/dashy/sources/reddit/: __init__.py  types.py  worldnews.py
tests/: conftest.py
tests/unit/: test_reddit.py  test_weather.py  test_worldnews.py
