[tool.poetry]
name = "dashy"
version = "0.2.1"
description = ""
authors = ["Axel <dev@absalon.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
Pillow = {version = "^9.0.1", optional = true}

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"
flake8-builtins = "^1.5.3"
flake8-isort = "^4.0.0"
flake8-bugbear = "^21.4.3"
flake8-black = "^0.2.3"
flake8-comprehensions = "^3.6.0"
flake8-annotations = "^2.6.2"
ipdb = "^0.13.9"
pdbpp = "^0.10.3"
pytest = "^6.2.4"
pytest-clarity = "^1.0.1"
types-requests = "^2.25.6"
mock = "^4.0.3"
types-mock = "^0.1.5"
freezegun = "^1.1.0"
types-freezegun = "^1.1.0"

[tool.poetry.extras]
pillow = ["pillow"]

[tool.black]
target-version = ['py37']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
extra_standard_library = ['typing_extensions']

[tool.mypy]
python_version = "3.7"
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
